examples/test/testpolicy792.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy792
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key2: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value26
          key44: value7
      podSelector:
        matchLabels:
          key45: value23
          key29: value47
